# zenith

./: .gitattributes  .gitignore  .zenith.yml  Cargo.toml  LICENSE-MIT  README.md  book.toml  build_err.txt  build_err_2.txt  build_err_3.txt  build_out.txt  cache_out_1.txt  cache_out_2.txt  cache_out_3.txt  firecracker_out.txt  matrix_out.txt  usecases.md  user_guide.md  zenith_test_out.txt
benches/: zenith_benchmarks.rs
docs/: PROGRESS.md  architecture.md  idea.md  motto.md  phase_0.md  phase_1.md  phase_10.md  phase_11.md  phase_11_15.md  phase_12.md  phase_13.md  phase_14.md  phase_15.md  phase_2.md  phase_3.md  phase_4.md  phase_5.md  phase_6.md  phase_6_and_beyond.md  phase_7.md  phase_8.md  phase_9.md  phase_9_10.md  plugin_authoring.md  roadmap.md
docs/book/: README.md  SUMMARY.md  changelog.md  faq.md  use-cases.md  user-guide.md
docs/book/backends/: container.md  firecracker.md  plugins.md  wasm.md
docs/book/config/: caching.md  jobs-and-steps.md  matrix.md  overview.md  toolchains.md
docs/book/dashboard/: tui.md  web.md
docs/book/getting-started/: first-workflow.md  installation.md  quickstart.md
docs/book/plugins/: install.md  registry.md  writing.md
docs/book/remote/: binary-cache.md  cloud.md  machines.md
docs/book/reproducibility/: derivations.md  parallel.md  store.md
docs/book/toolchains/: go.md  node.md  python.md  rust.md
examples/plugin-example/: Cargo.toml  plugin.toml
examples/plugin-example/src/: main.rs
kernel/: zenith.config
src/: cli.rs  config.rs  lib.rs  main.rs  runner.rs  tests.rs  tools.rs
src/agent/: main.rs
src/cloud/: client.rs  mod.rs  packager.rs  types.rs
src/daemon/: client.rs  main.rs  mod.rs  protocol.rs  server.rs
src/hypervisor/: mod.rs  pool.rs  vm.rs  vmm.rs
src/init/: main.rs
src/plugin/: client.rs  manifest.rs  mod.rs  protocol.rs  registry.rs
src/remote/: config.rs  mod.rs  runner.rs  transport.rs
src/sandbox/: backend.rs  cache.rs  container.rs  firecracker.rs  layer_store.rs  mod.rs  wasm.rs  wine.rs
src/toolchain/: go.rs  mod.rs  node.rs  python.rs  rust_tc.rs
src/tui/: mod.rs
src/ui/: api.rs  dashboard.html  history.rs  mod.rs  server.rs
vscode-zenith/: language-configuration.json  package.json
vscode-zenith/schemas/: zenith-schema.json
vscode-zenith/src/: extension.ts
