[package]
name = "zenith"
version = "0.1.0"
edition = "2021"
description = "Local Multi-OS Workflow Runtime"
authors = ["Zenith Developer"]
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.32", features = ["full", "process"] }
