[package]
name = "zenith"
version = "0.1.0"
edition = "2021"
description = "Local Multi-OS Workflow Runtime"
authors = ["Zenith Developer"]
license = "MIT OR Apache-2.0"

[dependencies]
clap      = { version = "4.4", features = ["derive"] }
serde     = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow    = "1.0"
tracing   = "0.1"
tracing-subscriber = "0.3"
tokio     = { version = "1.32", features = ["full", "process"] }

# HTTP client for downloading rootfs images — no external tools needed
reqwest   = { version = "0.11", features = ["stream"] }

# Cross-platform progress display for downloads
indicatif = "0.17"

# Archive extraction (tar.gz rootfs images)
flate2    = "1.0"
tar       = "0.4"

# Unique session IDs for parallel matrix jobs
uuid      = { version = "1.4", features = ["v4"] }
lazy_static = "1.4"

# For Linux: raw syscall bindings (namespaces, chroot, mount, unshare)
# Only compiled on Linux — zero cost on other platforms
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["process", "mount", "sched"] }
