[package]
name = "zenith"
version = "0.1.0"
edition = "2021"
description = "Local Multi-OS Workflow Runtime"
authors = ["Zenith Developer"]
license = "MIT OR Apache-2.0"

default-run = "zenith"

[[bin]]
name = "zenith"
path = "src/main.rs"

[[bin]]
name = "zenith-agent"
path = "src/agent/main.rs"

[dependencies]
clap      = { version = "4.4", features = ["derive"] }
serde     = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow    = "1.0"
tracing   = "0.1"
tracing-subscriber = "0.3"
tokio     = { version = "1.32", features = ["full", "process"] }

# HTTP client for downloads, cloud API, and multipart uploads
reqwest   = { version = "0.11", features = ["stream", "blocking", "multipart", "json"] }

# Response body bytes
bytes = "1.5"

# Cross-platform progress display for downloads
indicatif = "0.17"

# Archive extraction (tar.gz rootfs images and tool binaries)
flate2    = "1.0"
tar       = "0.4"

# XZ/LZMA extraction (wasmtime ships as .tar.xz)
xz2       = "0.1"

# ZIP extraction (wasmtime Windows binary)
zip       = "0.6"

# Unique session IDs for parallel matrix jobs
uuid      = { version = "1.4", features = ["v4"] }
lazy_static = "1.4"
async-trait = "0.1"
sha2        = "0.10"
hex         = "0.4"

# Glob pattern matching (Phase 6: watch file hashing)
glob = "0.3"

# JSON for cache metadata and plugin protocol
serde_json = "1.0"

# TOML for plugin.toml manifest parsing (Phase 8) and remotes.toml (Phase 9)
toml = "0.8"

# SSE streaming for cloud log tailing (Phase 10) and web dashboard
futures-util = "0.3"

# Web dashboard (Phase 11)
axum          = { version = "0.7", features = ["macros"] }
tower-http    = { version = "0.5", features = ["cors", "fs"] }
tokio-stream  = "0.1"

# TUI — terminal dashboard (Phase 11)
ratatui   = "0.26"
crossterm = "0.27"


# For Linux: raw syscall bindings (namespaces, chroot, mount, unshare)
# Only compiled on Linux — zero cost on other platforms
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["process", "mount", "sched", "fs"] }
